[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "guidaeta"
version = "0.1.0"
description = "Utility tools for handling the guidaeta dataset."
authors = [
  { name = "Stefan Lengauer", email = "s.lengauer@tugraz.at" }
]
readme = "README.md"
requires-python = ">=3.8"
license-files = ["LICENSE"]
dependencies = [
  "numpy"
]

